service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  selector:
    app: user-management-service
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8089
